bugs fixed: mobile forms full height, filter reset, add please wait on login, center delete popup on mobile

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -385,6 +385,20 @@ body.dark-mode {
     .invoice-items-head {
       display: none;
     }
+
+    .showDelete {
+      position: unset;
+    }
+
+    .show.form {
+      position: relative;
+    }
+
+   .single-invoice-page,
+   .invoice-page {
+      display: none;;
+    }
+
 }
 
 @media only screen and (max-width: 390px) {
